fix tries and failed message

--- a/src/style.scss
+++ b/src/style.scss
@@ -89,6 +89,7 @@
             left: 0;
             right: 0;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             font-size: 36px;
